--- a/package.json
+++ b/package.json
@@ -13,10 +13,14 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "lodash-es": "^4.17.21",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "zundo": "^2.0.0",
+    "zustand": "^4.4.3"
   },
   "devDependencies": {
+    "@types/lodash-es": "^4.17.9",
     "@types/react": "^18.2.15",
     "@types/react-dom": "^18.2.7",
     "@vitejs/plugin-react-swc": "^3.3.2",
