--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@shopify/polaris": "^12.0.0",
     "@shopify/polaris-icons": "^7.9.0",
     "lodash-es": "^4.17.21",
+    "lz-string": "^1.5.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "zundo": "^2.0.0",
