--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "lz-string": "^1.5.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-hotkeys-hook": "^4.4.1",
     "zundo": "^2.0.0",
     "zustand": "^4.4.3"
   },
