--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "@shopify/polaris": "^12.0.0",
     "@shopify/polaris-icons": "^7.9.0",
+    "immer": "^10.0.3",
     "lodash-es": "^4.17.21",
     "lz-string": "^1.5.0",
     "nanoid": "^5.0.2",
