--- a/package.json
+++ b/package.json
@@ -12,8 +12,10 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@dnd-kit/core": "^6.0.8",
     "@shopify/polaris": "^12.0.0",
     "@shopify/polaris-icons": "^7.9.0",
+    "classnames": "^2.3.2",
     "immer": "^10.0.3",
     "lodash-es": "^4.17.21",
     "lz-string": "^1.5.0",
