--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
   },
   "dependencies": {
     "@dnd-kit/core": "^6.0.8",
+    "@dnd-kit/sortable": "^7.0.2",
+    "@dnd-kit/utilities": "^3.2.1",
     "@shopify/polaris": "^12.0.0",
     "@shopify/polaris-icons": "^7.9.0",
     "classnames": "^2.3.2",
