Awesome dnd kit 🚀

--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   "license": "MIT",
   "scripts": {
     "dev": "vite",
+    "format": "prettier -w --cache .",
     "build": "tsc && vite build",
     "preview": "vite preview"
   },
