--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
   "scripts": {
     "dev": "vite",
     "format": "prettier -w --cache .",
-    "build": "tsc && vite build",
+    "build": "typecheck && vite build",
+    "typecheck": "tsc",
     "preview": "vite preview"
   },
   "dependencies": {
