--- a/package.json
+++ b/package.json
@@ -24,9 +24,11 @@
     "lodash-es": "^4.17.21",
     "lz-string": "^1.5.0",
     "nanoid": "^5.0.2",
+    "prism-react-renderer": "^2.1.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hotkeys-hook": "^4.4.1",
+    "react-split-pane": "^0.1.92",
     "zundo": "^2.0.0",
     "zustand": "^4.4.3"
   },
