Integrate code generation 🚀

--- a/package.json
+++ b/package.json
@@ -17,29 +17,27 @@
     "@dnd-kit/core": "^6.0.8",
     "@dnd-kit/sortable": "^7.0.2",
     "@dnd-kit/utilities": "^3.2.1",
-    "@shopify/polaris": "^12.0.0",
     "@shopify/polaris-icons": "^7.9.0",
     "@shopify/polaris-tokens": "^8.0.0",
+    "@shopify/polaris": "^12.0.0",
+    "@types/lodash-es": "^4.17.9",
+    "@types/react-dom": "^18.2.13",
+    "@types/react": "^18.2.28",
+    "@vitejs/plugin-react-swc": "^3.4.0",
     "classnames": "^2.3.2",
     "immer": "^10.0.3",
     "lodash-es": "^4.17.21",
     "lz-string": "^1.5.0",
     "nanoid": "^5.0.2",
+    "prettier": "3.0.3",
     "prism-react-renderer": "^2.1.0",
-    "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hotkeys-hook": "^4.4.1",
     "react-split-pane": "^0.1.92",
+    "react": "^18.2.0",
+    "typescript": "^5.2.2",
+    "vite": "^4.4.11",
     "zundo": "^2.0.0",
     "zustand": "^4.4.3"
-  },
-  "devDependencies": {
-    "@types/lodash-es": "^4.17.9",
-    "@types/react": "^18.2.28",
-    "@types/react-dom": "^18.2.13",
-    "@vitejs/plugin-react-swc": "^3.4.0",
-    "prettier": "3.0.3",
-    "typescript": "^5.2.2",
-    "vite": "^4.4.11"
   }
 }
