--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "prism-react-renderer": "^2.1.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-error-boundary": "^4.0.11",
     "react-split-pane": "^0.1.92",
     "react-use": "^17.4.0",
     "typescript": "^5.2.2",
