Update setting page template 💞

--- a/src/templates/settingsPage.json
+++ b/src/templates/settingsPage.json
@@ -215,7 +215,7 @@
                   "as": "",
                   "align": "",
                   "inlineAlign": "",
-                  "gap": "",
+                  "gap": "400",
                   "id": "",
                   "reverseOrder": false,
                   "role": ""
