--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   },
   "license": "MIT",
   "scripts": {
-    "dev": "vite",
+    "dev": "vite --host",
     "format": "prettier -w --cache .",
     "build": "npm run typecheck && vite build",
     "typecheck": "tsc",
