--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   "scripts": {
     "dev": "vite --host",
     "format": "prettier -w --cache .",
-    "build": "npm run typecheck && vite build",
+    "build": "pnpm typecheck && vite build",
     "typecheck": "tsc",
     "preview": "vite preview"
   },
@@ -17,12 +17,12 @@
     "@dnd-kit/core": "^6.1.0",
     "@dnd-kit/sortable": "^8.0.0",
     "@dnd-kit/utilities": "^3.2.2",
-    "@shopify/polaris": "^12.6.0",
-    "@shopify/polaris-icons": "^7.13.0",
-    "@shopify/polaris-tokens": "^8.4.0",
+    "@shopify/polaris": "^12.10.0",
+    "@shopify/polaris-icons": "^8.0.0",
+    "@shopify/polaris-tokens": "^8.5.0",
     "@stackblitz/sdk": "^1.9.0",
     "@types/lodash-es": "^4.17.12",
-    "@types/react": "^18.2.46",
+    "@types/react": "^18.2.48",
     "@types/react-dom": "^18.2.18",
     "@vitejs/plugin-react-swc": "^3.5.0",
     "classnames": "^2.5.1",
@@ -31,15 +31,15 @@
     "lz-string": "^1.5.0",
     "million": "^2.6.4",
     "nanoid": "^5.0.4",
-    "prettier": "3.1.1",
+    "prettier": "3.2.4",
     "prism-react-renderer": "^2.3.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-error-boundary": "^4.0.12",
     "react-split-pane": "^0.1.92",
-    "react-use": "^17.4.2",
+    "react-use": "^17.5.0",
     "typescript": "^5.3.3",
-    "vite": "^5.0.10",
-    "zustand": "^4.4.7"
+    "vite": "^5.0.12",
+    "zustand": "^4.5.0"
   }
 }
