--- a/package.json
+++ b/package.json
@@ -9,15 +9,18 @@
   "scripts": {
     "dev": "vite --host",
     "format": "prettier -w --cache .",
-    "build": "pnpm typecheck && vite build",
+    "build": "npm run typecheck && vite build",
     "typecheck": "tsc",
-    "live": "pnpm run build && netlify deploy --prod",
+    "live": "npm run build && netlify deploy --prod",
     "preview": "vite preview"
   },
   "dependencies": {
     "@dnd-kit/core": "^6.1.0",
     "@dnd-kit/sortable": "^8.0.0",
     "@dnd-kit/utilities": "^3.2.2",
+    "@netlify/blobs": "^7.3.0",
+    "@netlify/edge-functions": "^2.8.1",
+    "@netlify/functions": "^2.7.0",
     "@shopify/polaris": "^13.4.0",
     "@shopify/polaris-icons": "^9.1.0",
     "@shopify/polaris-tokens": "^9.1.0",
@@ -25,6 +28,7 @@
     "@types/lodash-es": "^4.17.12",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
+    "@types/shortid": "^0.0.32",
     "@vitejs/plugin-react-swc": "^3.7.0",
     "classnames": "^2.5.1",
     "immer": "^10.1.1",
@@ -38,6 +42,7 @@
     "react-error-boundary": "^4.0.13",
     "react-split-pane": "^0.1.92",
     "react-use": "^17.5.0",
+    "shortid": "^2.2.16",
     "typescript": "^5.4.5",
     "vite": "^5.2.11",
     "zustand": "^4.5.2"
