--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "lodash-es": "^4.17.21",
     "lz-string": "^1.5.0",
     "nanoid": "^5.0.7",
+    "netlify-cli": "^17.24.0",
     "prettier": "3.2.5",
     "prism-react-renderer": "^2.3.1",
     "react": "^18.3.1",
