--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "author": {
     "name": "Nam Nguyen",
     "email": "nam.nguyen.node@gmail.com",
-    "url": "https://namnguyen.design"
+    "url": "https://namnguyen.netlify.app"
   },
   "license": "MIT",
   "scripts": {
